[project]
name = "blender-model-linker"
version = "1.0.0"
description = "A Blender addon for linking external 3D model files to collections. This allows you to easily update and manage your imported models."
authors = ["Giancarlo Viali"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End-Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "fake-bpy-module>=20231205",
]

[project.urls]
Homepage = "https://github.com/giancarlo-viali/blender-model-linker"
